# groove-on-a-real-train

./: .dockerignore  .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: checks.yml  deploy.yml
src/: main.py
src/groove/: ffmpeg_command_builder.py  ffmpeg_runtime.py
src/groove/operations/: add_text.py  apply_filter.py  concatenate.py  convert.py  cut.py  download.py  extract_voice.py
tests/operations/: test_add_text_operation.py  test_apply_filter_operation.py  test_concatenate_operation.py  test_convert_operation.py  test_cut_operation.py  test_download_operation.py
